<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_layout_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/edt_nomeNovaTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_descricaoNovaTarefa"
            android:hint="@string/g_nome"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edt_descricaoNovaTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_nomeNovaTarefa"
            android:hint="@string/g_descricao"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edt_data_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_descricaoNovaTarefa"
            android:layout_below="@+id/edt_descricaoNovaTarefa"
            android:hint="@string/g_data"
            android:inputType="date"
            android:onClick="onClickSetarData" />

        <EditText
            android:id="@+id/edt_tempo_limite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_data_tarefa"
            android:layout_below="@+id/edt_data_tarefa"
            android:hint="@string/g_tempo_limite"
            android:inputType="time"
            android:onClick="onClickSetarTempoLimite" />

        <Spinner
            android:id="@+id/s_prioridade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edt_data_tarefa" />

        <!-- Colocar o view de dono ainda definir como vai ser -->

    </RelativeLayout>

</ScrollView>