<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_layout_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.android.cotuca.toptask.CadastroUsuarioActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/edt_nomeNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/g_nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_emailNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_nomeNovoUsuario"
        android:layout_below="@+id/edt_nomeNovoUsuario"
        android:hint="@string/g_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_senhaNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_emailNovoUsuario"
        android:layout_below="@+id/edt_emailNovoUsuario"
        android:hint="@string/g_senha"
        android:inputType="textPassword" />

</RelativeLayout>