<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_layout_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/edt_DescricaoNovoProjeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_nomeNovoProjeto"
            android:hint="@string/g_descricao"
            android:inputType="textMultiLine" />



        <EditText
            android:id="@+id/edt_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_DescricaoNovoProjeto"
            android:layout_alignLeft="@+id/edt_DescricaoNovoProjeto"
            android:hint="@string/g_data_termino"
            android:onClick="setarData"
            android:inputType="date" />

        
        <EditText
            android:id="@+id/edt_nomeNovoProjeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_DescricaoNovoProjeto"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/g_nome"
            android:inputType="textCapWords" />
    </RelativeLayout>

</ScrollView>