<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_layout_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

<!--         <FrameLayout
            android:id="@+id/flay_img_tarefa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" >

            <ImageView
                android:id="@+id/img_tarefa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_good" />
        </FrameLayout> -->

        <EditText
            android:id="@+id/edt_nomeNovaTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_descricaoNovaTarefa"
            android:layout_below="@+id/flay_img_tarefa"
            android:hint="@string/g_nome"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edt_descricaoNovaTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_nomeNovaTarefa"
            android:hint="@string/g_descricao"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edt_data_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_descricaoNovaTarefa"
            android:layout_below="@+id/edt_descricaoNovaTarefa"
            android:hint="@string/g_data"
            android:inputType="date"
            android:onClick="onClickSetarData" >
        </EditText>

        <Spinner
            android:id="@+id/s_prioridade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edt_data_tarefa" />

        <!-- Colocar o view de dono ainda definir como vai ser -->

    </RelativeLayout>

</ScrollView>